z-index fix

--- a/views/scss/style.scss
+++ b/views/scss/style.scss
@@ -112,6 +112,7 @@ code {
   td {
     padding: 10px 20px;
   }
+  z-index: 10;
   display: none;
 }
 
